Fix Highlights on Safari

--- a/assets/sass/patterns/organisms/highlight.scss
+++ b/assets/sass/patterns/organisms/highlight.scss
@@ -31,7 +31,8 @@
   @include nospace();
 
   @media only all and (min-width: #{get-rem-from-px($bkpt-site--x-wide)}em) {
-    column-count: 3;
+    display: grid;
+    grid-template-columns: 4fr 4fr 4fr;
     column-gap: 3rem;
   }
 }
